@@ -1,5 +1,5 @@
 if HAVE_SF2
-INCLUDES = $(all_includes) $(GIG_CFLAGS)
+AM_CPPFLAGS = $(all_includes) $(GIG_CFLAGS)
 METASOURCES = AUTO
 
 AM_CXXFLAGS = -Wreturn-type -ffast-math
