@@ -4,7 +4,7 @@ plugindir = $(libdir)/au
 examples_dir = $(DEVELOPER_EXTRAS_DIR)
 au_public_dir = $(examples_dir)/CoreAudio/AudioUnits/AUPublic
 ca_public_dir = $(examples_dir)/CoreAudio/PublicUtility
-INCLUDES = -I$(au_public_dir)/AUBase -I$(au_public_dir)/OtherBases \
+AM_CPPFLAGS = -I$(au_public_dir)/AUBase -I$(au_public_dir)/OtherBases \
     -I$(au_public_dir)/Utility -I$(ca_public_dir) $(GIG_CFLAGS) $(SQLITE3_CFLAGS) $(SNDFILE_CFLAGS)
 
 noinst_PROGRAMS = LinuxSamplerAU
