@@ -2,7 +2,8 @@ if HAVE_VST
 
 plugindir = $(libdir)/vst
 plugin_LTLIBRARIES = LinuxSampler.la
-INCLUDES = -I$(VSTSDK_DIR) -I$(VSTSDK_DIR)/public.sdk/source/vst2.x \
+LinuxSampler_la_CPPFLAGS = -I$(VSTSDK_DIR) \
+	-I$(VSTSDK_DIR)/public.sdk/source/vst2.x \
 	$(GIG_CFLAGS) $(SQLITE3_CFLAGS)
 
 LinuxSampler_la_SOURCES = PluginVst.cpp PluginVst.h
@@ -18,7 +19,7 @@ if HAVE_WINDOWS
 LinuxSampler_la_LDFLAGS += -Wl,$(srcdir)/PluginVst.def -Wl,-s
 LinuxSampler_la_LIBADD += -lws2_32
 else
-LinuxSampler_la_CPPFLAGS = -D__cdecl= -DDATADIR=\""$(datadir)"\"
+LinuxSampler_la_CPPFLAGS += -D__cdecl= -DDATADIR=\""$(datadir)"\"
 if LINUX
 LinuxSampler_la_LDFLAGS += -Wl,--defsym -Wl,main=VSTPluginMain -Wl,-s
 endif
